--- a/basbous.html
+++ b/basbous.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>KHOTI WHBABI KOLKOM 3ZAZ 3LIYA<br>M3AKOM ANAS BASSOU LBSBOS LM9AWD</h1>
-    <video width="320" height="240" autoplay>
+    <video width="320" height="240" autoplay controls>
         <source src="Vidéo sans titre ‐ Réalisée avec Clipchamp.mp4" type="video/mp4">
       </video>
     <h2>n9dmlikom rassi ana anas bassou 3ziz 3liya drari sghar saraha ndrbhom homa wprofa dbiocell d s1 saraha mankbdoch </h2>
