--- a/basbous.html
+++ b/basbous.html
@@ -11,7 +11,8 @@
         <source src="anas basbous.mp4" type="video/mp4">
       </video>
     <h2>n9dmlikom rassi ana anas bassou 3ziz 3liya drari sghar saraha ndrbhom homa wprofa dbiocell d s1 saraha mankbdoch </h2>
-    <img src="wahd khona.jpg" alt="">
+    <img src="wahd khona.jpg" alt="" width="400" 
+     height="500">
     <h2>d3iw m3aya njib chacun :> </h2>  
 </body>
 </html>
